# sddx

./: .clangd  .gitignore  README.md  build.bat  build_sdl.bat  run.bat  sddx.rdbg  setup.bat
src/: CMakeLists.txt  assets.c  assets.h  defs.h  entities.c  entities.h  entity_spawn.c  entity_spawn.h  game.c  game.h  game_input.c  game_input.h  game_math.c  game_math.h  graphics.c  graphics.h  hud.c  main.c  particles.c  particles.h  platform.h  score.c  score.h  ui.c  ui.h
src/engine/: assets.c  assets.h  graphics.c  graphics.h  input.c  input.h  lerp.c  lerp.h  math.c  math.h  particles.c  particles.h  platform.c  platform.h  types.h  ui.c  ui.h
src/game/: entities.c  entities.h  game.c  game.h  game_types.h  hud.c  score.c  score.h
src/game/entities/: drifter.c  grappler.c  items.c  player.c  tracker.c  turret.c  ufo.c  weapons.c
